# c-project-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: example.h
src/: example.c  main.c
test/: CMakeLists.txt  test_example.c
